[gd_scene load_steps=5 format=3 uid="uid://3b58k6ry4hgh"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_haleu"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w78oe"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jnbe1"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qb3l7"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 250
border_width_top = 250
border_width_right = 250
border_width_bottom = 250
border_color = Color(1, 0, 0.164706, 0.223529)
corner_radius_top_left = 360
corner_radius_top_right = 360
corner_radius_bottom_right = 360
corner_radius_bottom_left = 360

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
floor_max_angle = 0.872665
floor_snap_length = 0.2
script = ExtResource("1_haleu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_w78oe")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_jnbe1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.8, 0)

[node name="WallBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="StaggerTimer" type="Timer" parent="."]
one_shot = true

[node name="WallRunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RollBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="LeftRayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(1, 0, 0)

[node name="RightRayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(-1, 0, 0)

[node name="CeilingRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
target_position = Vector3(0, 0.9, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="StaggerPanel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qb3l7")
